panier, footer, image user

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,51 +1,54 @@
-<footer class="footer-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 col-md-3 item">
-				<h3>NOS ENGAGEMENTS</h3>
-				<ul>
-					<li><a href="#">Paiement securisé</a></li>
-					<li><a href=" {{ path('app_conditions') }}">CGV</a></li>
+</main>
+<div class="footer-dark">
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-md-3 item">
+					<h3>NOS ENGAGEMENTS</h3>
+					<ul>
+						<li><a href="#">Paiement securisé</a></li>
+						<li><a href=" {{ path('app_conditions') }}">CGV</a></li>
 
-				</ul>
+					</ul>
+				</div>
+				<div class="col-sm-6 col-md-3 item">
+					<h3>MENTIONS LÉGALES
+					</h3>
+					<ul>
+
+						<li><a href=" {{ path('app_protections') }} ">Protections de données</a></li>
+
+
+						<li><a href=" {{ path('app_histoire') }} ">Qui sommes-nous</a></li>
+
+						<li><a href="{{path('app_contact')}}">Contactez-nous</a></li>
+
+
+					</ul>
+				</div>
+				
+				<div class="col-md-6 item text">
+					<h3>OKOAFRO HAIR
+					</h3>
+					<p>est un site e-commerce de vente des produits et accessoires pour cheveux afro.</p>
+				</div>
+				<div class="col item social">
+					<a href="#">
+						<i class="icon ion-social-facebook"></i>
+					</a>
+					<a href="#">
+						<i class="icon ion-social-twitter"></i>
+					</a>
+					<a href="#">
+						<i class="icon ion-social-snapchat"></i>
+					</a>
+					<a href="#">
+						<i class="icon ion-social-instagram"></i>
+					</a>
+				</div>
 			</div>
-			<div class="col-sm-6 col-md-3 item">
-				<h3>MENTIONS LÉGALES
-				</h3>
-				<ul>
-
-					<li><a href=" {{ path('app_protections') }} ">Protections de données</a></li>
-
-
-					<li><a href=" {{ path('app_histoire') }} ">Qui sommes-nous</a></li>
-
-					<li><a href="{{path('app_contact')}}">Contactez-nous</a></li>
-
-
-				</ul>
-			</div>
-			<div class="col-md-6 item text">
-				<h3>OKOAFRO HAIR
-				</h3>
-				<p>est un site e-commerce de vente des produits et accessoires pour cheveux afro.</p>
-			</div>
-			<div class="col item social">
-				<a href="#">
-					<i class="icon ion-social-facebook"></i>
-				</a>
-				<a href="#">
-					<i class="icon ion-social-twitter"></i>
-				</a>
-				<a href="#">
-					<i class="icon ion-social-snapchat"></i>
-				</a>
-				<a href="#">
-					<i class="icon ion-social-instagram"></i>
-				</a>
-			</div>
+			<p class="copyright">
+				OKOAFRO HAIR © 2022</p>
 		</div>
-		<p class="copyright">
-			OKOAFRO HAIR © 2022
-		</p>
-	</div>
-</footer>
+	</footer>
+</div>
