--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+main {
+    min-height: calc(100vh - 411px);
+}
 .primary-clr {
     color: rgba(128, 44, 0, 0.79) !important;
 }
@@ -202,3 +205,23 @@ aside nav ul a {
     margin-left: 16px;
 }
 
+.fa-solid, .fa-basket-shopping {
+    color :black !important;
+    font-size:20px ;
+
+
+}
+.example-wrapper {
+    margin: 1em auto;
+    max-width: 800px;
+    width: 95%;
+    font: 18px/1.5 sans-serif;
+}
+
+.example-wrapper code {
+    background: #F5F5F5;
+    padding: 2px 6px;
+}
+.cart-badge{
+    color: white;
+}
