--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BoutiqueController!
+{% block title %} Nos produits!
 {% endblock %}
 
 {% block body %}
 
-
 	<div class="container-fluid">
 		<div class="row">
+
+
 			<div class="col-lg-2">
 				<p>
 					<h1>Catégories</h1>
@@ -36,11 +37,11 @@
 
 						<div class="col-4  mb-4 mt-4">
 							<div class="card">
-							<div class="d-flex justify-content-center">
-<img src="{{ asset('image/upload/' ~ produit.image) }}" class="card-img-top" style="width:60%; height:200px" ; alt="">
+								<div class="d-flex justify-content-center">
+									<img src="{{ asset('image/upload/' ~ produit.image) }}" class="card-img-top" style="width:60%; height:200px" ; alt="">
 
 
-							</div>
+								</div>
 								<div class="card-body text-center">
 									<h5 class="card-title ">{{produit.nom}}</h5>
 									<p>{{produit.prix}}€</p>
@@ -66,4 +67,5 @@
 		</div>
 
 	</div>
+
 {% endblock %}
