--- a/templates/conditions/index.html.twig
+++ b/templates/conditions/index.html.twig
@@ -23,7 +23,7 @@
 
 
 	<p>
-		Les présentes conditions générales de vente visent à définir les modalités de vente entre OKOAFRO HAIR et le client, les modalités des services en passant par le paiement et la livraison. Elles règlent toutes les étapes nécessaires à la passation de commande entre les parties contractantes, ceci dans le cadre d’un système de vente à distance sur internet, pour des marchandises définies dans le catalogue de vente du site www.Alice-délice.com</p>
+		Les présentes conditions générales de vente visent à définir les modalités de vente entre OKOAFRO HAIR et le client, les modalités des services en passant par le paiement et la livraison. Elles règlent toutes les étapes nécessaires à la passation de commande entre les parties contractantes, ceci dans le cadre d’un système de vente à distance sur internet, pour des marchandises définies dans le catalogue de vente du site www.okoafro-hair.fr</p>
 
 	<h4>ARTICLE 2 CONDITIONS D’APPLICATION :</h4>
 
@@ -102,9 +102,8 @@
 	<h4>ARTICLE 9 EXPÉDITIONS :</h4>
 
 	<p>
-		OKOAFRO HAIR n’effectue pas de livraison. Toute commande doit être retiré par l’acheter dans notre atelier.
-		
-		OKOAFRO HAIR se réserve le droit de déconseiller l’envoi de certains produits délicats durant les périodes de chaleur.
+      Le Client est tenu d’effectuer toutes les diligences nécessaires à la bonne réalisation de la livraison. A ce titre, il est tenu de fournir l’ensemble des informations indispensables à la livraison (adresse exacte, code de porte etc.). A défaut, Pâtiss’Passion ne saurait être tenue responsable d’un retard ou d’un défaut de livraison. Dans un tel cas, les produits seront retournés à l’entrepôt de notre société et l’acheteur devra prendre contact avec notre Service Clients afin de prendre connaissance des démarches à suivre pour récupérer les produits commandés. Notre société décline toute responsabilité quant au délai de récupération par le client de ses produits.
+
 	</p>
 
 	<h4>ARTICLE 10 GARANTIE DES PRODUITS :</h4>
@@ -118,7 +117,7 @@
 	<p>
 		Tous les éléments de site (photographie, illustration, descriptifs, logo, marque…) sont et restent la propriété intellectuelle et exclusive de OKOAFRO HAIR. La reproduction, la rediffusion ou l’utilisation à quelque titre que ce soit des éléments du site sont soumis à l’autorisation expresse et préalable de OKOAFRO HAIR titulaire de l’ensemble des droits de propriété intellectuelle.
 		
-		L’utilisateur qui dispose d’un site internet et qui désire placer sur son site un lien simple renvoyant directement au site www.Alice-délice.com doit préalablement solliciter l’autorisation de OKOAFRO HAIR.
+		L’utilisateur qui dispose d’un site internet et qui désire placer sur son site un lien simple renvoyant directement au site www.okoafro-hair@gmail.com doit préalablement solliciter l’autorisation de OKOAFRO HAIR.
 	</p>
 
 	<h4>ARTICLE 12 INFORMATIQUE ET LIBERTÉS, DONNÉES PERSONNELLES :</h4>
