--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,158 +13,154 @@
 			padding: 2px 6px;
 		}
 	</style>
-	
-{% for message in app.flashes('success') %}
 
-	<div class="alert alert-success" role="alert">{{ message }}</div>
-{% endfor %}
+	{% for message in app.flashes('success') %}
 
-<main>
-	<div class="example-wrapper">
+		<div class="alert alert-success" role="alert">{{ message }}</div>
+	{% endfor %}
+
+	<main>
+		<div class="example-wrapper">
 
 
-		<h1 style="margin-top:50px; text-align:center;">OKOAFRO HAIR
-			    est un site e-commerce de vente des produits et accessoires pour cheveux afro.
-		</h1>
+			<h1 style="margin-top:50px; text-align:center;">OKOAFRO HAIR
+							    est un site e-commerce de vente des produits et accessoires pour cheveux afro.
+			</h1>
 
-		<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active" data-bs-interval="10000">
+						<img src="image/Beurredekarite.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Beurre de Karité</h5>
+						</div>
+					</div>
+					<div class="carousel-item" data-bs-interval="2000">
+						<img src="image/Peignedemelant.webp" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Brosse démêlante</h5>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img src="image/sheamoisture.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>
+								Gamme Shea Moisture</h5>
+						</div>
+					</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active" data-bs-interval="10000">
-					<img src="image/Beurredekarite.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Beurre de Karité</h5>
-					</div>
-				</div>
-				<div class="carousel-item" data-bs-interval="2000">
-					<img src="image/Peignedemelant.webp" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Brosse démêlante</h5>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="image/sheamoisture.jpg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>
-							Gamme Shea Moisture</h5>
-					</div>
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
+
 		</div>
 
-	</div>
+
+		<hr class="featurette-divider">
+
+		<div class="row featurette">
+			<div class="col-md-7">
+				<h2 style="font-family: 'Playfair Display', serif;">Produits selon type de cheveux
+
+				</h2>
 
 
-<hr class="featurette-divider">
-
-<div class="row featurette">
-	<div class="col-md-7">
-		<h2 style="font-family: 'Playfair Display', serif;">Produits selon type de cheveux
-
-		</h2>
+				<p class="lead">
+					Cette classification est très utilisée par les naturalistas pour déterminer leur type de cheveux et pour discuter entre elles des produits et des méthodes de soins qui peuvent leur convenir. Cette classification est assez simple, elle sert de guide général pour une meilleure identification de leurs besoins capillaires, des produits à utiliser sur leurs cheveux et pour savoir comment bien les entretenir.</p>
 
 
-<p class="lead">
-	Cette classification est très utilisée par les naturalistas pour déterminer leur type de cheveux et pour discuter entre elles des produits et des méthodes de soins qui peuvent leur convenir. Cette classification est assez simple, elle sert de guide général pour une meilleure identification de leurs besoins capillaires, des produits à utiliser sur leurs cheveux et pour savoir comment bien les entretenir.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/cheveux.png" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
+
+			</div>
+		</div>
+		<hr class="featurette-divider"><div class="row featurette">
+			<div class="col-md-7 order-md-2">
+				<h2 style="font-family: 'Playfair Display', serif;">Produits naturels faits maison</h2>
 
 
-	</div>
-	<div class="col-md-5">
-		<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/cheveux.png" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
-
-	</div>
-</div>
-<hr class="featurette-divider"><div class="row featurette">
-	<div class="col-md-7 order-md-2">
-		<h2 style="font-family: 'Playfair Display', serif;">Produits naturels faits maison</h2>
+				<p class="lead"></p>
 
 
-<p class="lead">
- </p>
+			</div>
+			<div class="col-md-5 order-md-1">
+				<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/Beurredekarite.jpg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
 
 
-	</div>
-	<div class="col-md-5 order-md-1">
-		<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/Beurredekarite.jpg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
+			</div>
+		</div><hr class="featurette-divider"><div class="row featurette">
+			<div class="col-md-7">
+
+				<h2 style="font-family:'Playfair Display',serif;">
+					Produits cheveux bébé</h2>
+
+				<p class="lead"></p>
+
+			</div>
+			<div class="col-md-5">
+				<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/produitkids1.jpg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
+
+			</div>
+		</div>
+
+	</div><hr class="featurette-divider"><div class="row featurette">
+		<div class="col-md-7 order-md-2">
+
+			<h2 style="font-family: 'Playfair Display', serif;">
+				Nos Accessoires
+			</h2>
 
 
-	</div>
-</div><hr class="featurette-divider"><div class="row featurette">
-	<div class="col-md-7">
+			<p class="lead"></p>
 
-		<h2 style="font-family:'Playfair Display',serif;"> Produits cheveux bébé</h2>
-
-<p class="lead">
- </p>
-
-	</div>
-	<div class="col-md-5">
-		<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/produitkids1.jpg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
-
-	</div>
-</div>
-
-</div><hr class="featurette-divider"><div class="row featurette">
-	<div class="col-md-7 order-md-2">
-
-		<h2 style="font-family: 'Playfair Display', serif;"> Nos Accessoires </h2>
+		</div>
+		<div class="col-md-5 order-md-1">
+			<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/access.jpg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
 
 
-<p class="lead"> 
-</p>
-
-	</div>
-	<div class="col-md-5 order-md-1">
-		<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="450" height="450" src="image/access.jpg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false">
-
-
-	</div>
+		</div>
 	</main>
 
-{% if lastSeen is not defined or lastSeen is null %}
+	{% if lastSeen is not defined or lastSeen is null %}
+		<div class="cookie-consent-banner">
+			<div class="cookie-consent-banner__inner">
+				<div class="cookie-consent-banner__copy">
+					<div class="cookie-consent-banner__header">CE SITE WEB UTILISE DES COOKIES</div>
 
+					<div class="cookie-consent-banner__description">
 
-<div class="cookie-consent-banner">
-	<div class="cookie-consent-banner__inner">
-		<div class="cookie-consent-banner__copy">
-			<div class="cookie-consent-banner__header">CE SITE WEB UTILISE DES COOKIES</div>
+						Nous utilisons des cookies pour personnaliser le contenu et les publicités, pour fournir des fonctionnalités de médias sociaux et pour analyser notre trafic. Nous partageons également des informations sur votre utilisation de notre site avec nos partenaires de médias sociaux, de publicité et d'analyse qui peuvent les combiner avec d'autres informations que vous leur avez fournies ou qu'ils ont collectées lors de votre utilisation de leurs services. Vous consentez à nos cookies si vous continuez à utiliser notre site Web.
 
-			<div class="cookie-consent-banner__description">
+					</div>
 
-				Nous utilisons des cookies pour personnaliser le contenu et les publicités, pour fournir des fonctionnalités de médias sociaux et pour analyser notre trafic. Nous partageons également des informations sur votre utilisation de notre site avec nos partenaires de médias sociaux, de publicité et d'analyse qui peuvent les combiner avec d'autres informations que vous leur avez fournies ou qu'ils ont collectées lors de votre utilisation de leurs services. Vous consentez à nos cookies si vous continuez à utiliser notre site Web.
+				</div>
 
+				<div class="cookie-consent-banner__actions">
+					<a href="{{ path('app_accueil', {'consent' : 'accept' } ) }}" class="cookie-consent-banner__cta">
+
+						Accepter
+					</a>
+
+					<a href="{{path('app_accueil',{'consent':'decline'})}}" class="cookie-consent-banner__cta cookie-consent-banner__cta--secondary">
+
+						Refuser
+					</a>
+				</div>
 			</div>
-
 		</div>
-
-		<div class="cookie-consent-banner__actions">
-			<a href="{{ path('app_accueil', {'consent' : 'accept' } ) }}" class="cookie-consent-banner__cta">
-
-				Accepter
-			</a>
-
-			<a href="{{path('app_accueil',{'consent':'decline'})}}" class="cookie-consent-banner__cta cookie-consent-banner__cta--secondary">
-
-				Refuser
-			</a>
-		</div>
-	</div>
-</div>
-{% endif %}
-
+	{% endif %}
 
 
 {% endblock %}
-
