--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="{% block description %}{% endblock %}">
-		<title>Okoafro Hair - {% block title %}{% endblock %}</title>
+		<title>Okoafro Hair -
+			{% block title %}{% endblock %}
+		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 		<link href="{{asset('css/style.css') }}" rel="stylesheet" type="text/css">
-
-
-		<link href="css/style2.css" rel="stylesheet">
+		<link href="{{asset('css/style2.css') }}" rel="stylesheet" type="text/css">
 		<link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
 		<link rel=" preconnect" href=" https://fonts.gstatic.com/" crossorigin>
 		<link href=" https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -30,11 +30,11 @@
 
 	<body>
 
-		{% include 'header.html.twig'%}
+		{% include 'header.html.twig' %}
 
 		{% block body %}{% endblock %}
-		
-		{% include 'footer.html.twig'%}
+
+		{% include 'footer.html.twig' %}
 
 
 	</body>
