--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="{% block description %}{% endblock %}">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 		<title>Okoafro Hair -
 			{% block title %}{% endblock %}
 		</title>
