--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -29,7 +29,7 @@
 			<div class="col-lg-10">
 				<div class="row">
 					{% for produit in produits %}
-						<div class="col-4  mb-4 mt-4">
+						<div class="col-lg-4 col-md-6 col-sm-12 mb-4 mt-4">
 							<div class="card">
 								<div class="d-flex justify-content-center">
 									<img src="{{ asset('image/upload/' ~ produit.image) }}" class="card-img-top" style="width:60%; height:200px" ; alt="">
