--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,76 +1,79 @@
-<header>
-	<nav class="navbar navbar-expand-lg" style="background-color:rgba(120, 41, 0, 0.78);">
+<nav class="navbar navbar-expand-lg" style="background-color:rgba(120, 41, 0, 0.78);">
 
-		<div
-			class="container-fluid">
-			<!-- <a class="navbar-brand" href="#">OKOAFRO HAIR</a> -->
-			<a href="{{ path('app_accueil')}}">
+	<div
+		class="container-fluid">
+		<!-- <a class="navbar-brand" href="#">OKOAFRO HAIR</a> -->
+		<a href="{{ path('app_accueil')}}">
 
-				<img class="fit-picture" src="{{asset('image/okoaa.png')}}" alt="logo okoa" style="width: 100px; height: auto;">
+			<img class="fit-picture" src="{{asset('image/okoaa.png')}}" alt="logo okoa" style="width: 100px; height: auto;">
 
-			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
-						</button>
+		</a>
+<button class="navbar-toggler" style="border-color:#fff" type=" button" data-bs-toggle=" collapse" data-bs-target=" #navbarSupportedContent" aria-controls=" navbarSupportedContent" aria-expanded=" false" aria-label=" toggle navigation">
+
+<span class="navbar-toggler-icon">
+	<i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i>
+</span>
+
+		</button>
 
 
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link text-black" href="{{ path('app_histoire')}}">Histoire</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link text-black" href="{{ path('app_boutique_index')}}">Nos produits</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-black" href="{{ path('app_contact')}}">Contact</a>
+				</li>
+
+				{% if not is_granted('ROLE_USER') %}
+
 					<li class="nav-item">
-						<a class="nav-link text-black" href="{{ path('app_histoire')}}">Histoire</a>
+						<a class="nav-link text-black" href="{{path('app_register')}}">Inscription</a>
+
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link text-black" href="{{ path('app_boutique_index')}}">Nos produits</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link text-black" href="{{ path('app_contact')}}">Contact</a>
+						<a class="nav-link text-black" href="{{path('app_login')}}">Connexion</a>
+
 					</li>
 
-					{% if not is_granted('ROLE_USER') %}
 
-						<li class="nav-item">
-							<a class="nav-link text-black" href="{{path('app_register')}}">Inscription</a>
-
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link text-black" href="{{path('app_login')}}">Connexion</a>
-
-						</li>
+				{% endif %}
 
 
-					{% endif %}
+			</ul>
 
-
-				</ul>
-
-				{% block shopping_basket %}
+			{% block shopping_basket %}
 				{# {% if  shoppingCartCount > 0 %} #}
-					<li class="nav-item" style="list-style-type: none;">
-						<a href="{{ path('app_panier') }}">
-							<div class="container-cart">
-								<div class="wrapper">
-									<span class='cart-badge' id="targetEl" value="0">
-										{# {{shoppingCartCount}}</span> #}
+				<li class="nav-item" style="list-style-type: none;">
+					<a href="{{ path('app_panier') }}">
+						<div class="container-cart">
+							<div class="wrapper">
+								<span
+									class='cart-badge' id="targetEl" value="0">
+									{# {{shoppingCartCount}}</span> #}
 
 									<i class="fa-solid fa-basket-shopping"></i>
 
 								</div>
 							</div>
-						</li>
+						</a>
 					</li>
-				</a>
+					{# {% endif %} #}
+				{% endblock shopping_basket %}
+
+
+				{% if  app.user %}
+					<a href="{{path('app_user_profile')}}">
+						<img class="rounded-circle" style="width:70px; height:70px" src="{{ asset('image/profiles/User_Avatar_2.png') }}" data-holder-rendered="true">
+					</a>
+				{% endif %}
 			</li>
-		{# {% endif %} #}
-	{% endblock shopping_basket %}
-
-
-	{% if  app.user %}
-		<a href="{{path('app_user_profile')}}">
-			<img class="rounded-circle" style="width:70px; height:70px" src="{{ asset('image/profiles/User_Avatar_2.png') }}" data-holder-rendered="true">
-		</a>
-	{% endif %}
-	
-</div></ul></div></nav></header><main>
-
+		</div>
+	</div>
+</nav>
